--- a/index.html
+++ b/index.html
@@ -59,20 +59,17 @@
                      <div class="social-share-container">
                         <p class="share-prompt">Share Your Result:</p>
                         <div class="share-buttons">
-                            <a href="#" class="social-share-btn twitter" aria-label="Share on Twitter">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" /></svg>
+                            <a href="#" class="social-icon-link hero-icon" aria-label="Share on Twitter">
+                                <img src="images/icons/twitter-heroarea.svg" alt="Share on Twitter">
                             </a>
-                            <a href="#" class="social-share-btn facebook" aria-label="Share on Facebook">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" /></svg>
+                            <a href="#" class="social-icon-link hero-icon" aria-label="Share on Facebook">
+                                <img src="images/icons/facebook-heroarea.svg" alt="Share on Facebook">
                             </a>
-                            <a href="#" class="social-share-btn linkedin" aria-label="Share on LinkedIn">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 114.75 6.5 1.75 1.75 0 016.5 8.25zM19 19h-3v-4.74c0-1.42-.6-2.16-1.76-2.16-1.28 0-1.76.91-1.76 2.16V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.1 1.04 3.1 3.45z" /></svg>
+                            <a href="#" class="social-icon-link hero-icon" aria-label="Share on LinkedIn">
+                                <img src="images/icons/Linkedin-heroarea.svg" alt="Share on LinkedIn">
                             </a>
-                            <a href="#" class="social-share-btn instagram" aria-label="Share on Instagram">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.585-.069 4.85c-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07s-3.585-.012-4.85-.07c-3.252-.148-4.771-1.691-4.919-4.919-.058-1.265-.069-1.645-.069-4.85s.011-3.585.069-4.85c.149-3.225 1.664-4.771 4.919-4.919C8.415 2.175 8.796 2.163 12 2.163zm0 1.802c-3.141 0-3.505.01-4.73.066-2.618.119-3.714 1.214-3.833 3.833-.056 1.224-.066 1.588-.066 4.73s.01 3.505.066 4.73c.119 2.618 1.214 3.714 3.833 3.833 1.224.056 1.588.066 4.73.066s3.505-.01 4.73-.066c2.618-.119 3.714-1.214 3.833-3.833.056-1.224.066-1.588.066-4.73s-.01-3.505-.066-4.73c-.119-2.618-1.214-3.714-3.833-3.833-1.224-.056-1.588-.066-4.73-.066zm0 4.488c-1.929 0-3.488 1.56-3.488 3.488s1.56 3.488 3.488 3.488 3.488-1.56 3.488-3.488-1.56-3.488-3.488-3.488zm0 5.174c-1.022 0-1.852-.83-1.852-1.852s.83-1.852 1.852-1.852 1.852.83 1.852 1.852-.83 1.852-1.852 1.852zm4.332-5.228c-.512 0-.927.415-.927.927s.415.927.927.927.927-.415.927-.927-.415-.927-.927-.927z"/></svg>
-                            </a>
-                            <a href="#" class="social-share-btn tiktok" aria-label="Share on TikTok">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M22.2 5.9v2.6c-2.3.1-4.2-.8-5.3-2.3v7.4c0 4.1-3.4 7.4-7.4 7.4-4.1 0-7.4-3.4-7.4-7.4S5.4 6.2 9.5 6.2c.5 0 1 .1 1.5.2v2.5c-.5-.1-1-.2-1.5-.2-2.7 0-4.9 2.2-4.9 4.9s2.2 4.9 4.9 4.9 4.9-2.2 4.9-4.9v-9c1.3-1.8 3.4-2.9 5.8-2.9.1 0 .2 0 .3.0z"/></svg>
+                            <a href="#" class="social-icon-link hero-icon" aria-label="Share on Instagram">
+                                <img src="images/icons/instagram-heroarea.svg" alt="Share on Instagram">
                             </a>
                         </div>
                     </div>
@@ -346,29 +343,23 @@
     <footer>
         <div class="container footer-container">
             <div class="footer-social">
-                <a href="#" class="footer-social-link" aria-label="Twitter">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" />
-                    </svg>
+                <a href="#" class="social-icon-link footer-icon" aria-label="Twitter">
+                    <img src="images/icons/twitter.svg" alt="Twitter">
                 </a>
-                <a href="#" class="footer-social-link" aria-label="Facebook">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" />
-                    </svg>
+                <a href="#" class="social-icon-link footer-icon" aria-label="Facebook">
+                    <img src="images/icons/facebook.svg" alt="Facebook">
                 </a>
-                <a href="#" class="footer-social-link" aria-label="LinkedIn">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                         <path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 114.75 6.5 1.75 1.75 0 016.5 8.25zM19 19h-3v-4.74c0-1.42-.6-2.16-1.76-2.16-1.28 0-1.76.91-1.76 2.16V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.1 1.04 3.1 3.45z" />
-                    </svg>
+                <a href="#" class="social-icon-link footer-icon" aria-label="LinkedIn">
+                    <img src="images/icons/Linkedin.svg" alt="LinkedIn">
                 </a>
-                <a href="#" class="footer-social-link" aria-label="Instagram">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.585-.069 4.85c-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07s-3.585-.012-4.85-.07c-3.252-.148-4.771-1.691-4.919-4.919-.058-1.265-.069-1.645-.069-4.85s.011-3.585.069-4.85c.149-3.225 1.664-4.771 4.919-4.919C8.415 2.175 8.796 2.163 12 2.163zm0 1.802c-3.141 0-3.505.01-4.73.066-2.618.119-3.714 1.214-3.833 3.833-.056 1.224-.066 1.588-.066 4.73s.01 3.505.066 4.73c.119 2.618 1.214 3.714 3.833 3.833 1.224.056 1.588.066 4.73.066s3.505-.01 4.73-.066c2.618-.119 3.714-1.214 3.833-3.833.056-1.224.066-1.588.066-4.73s-.01-3.505-.066-4.73c-.119-2.618-1.214-3.714-3.833-3.833-1.224-.056-1.588-.066-4.73-.066zm0 4.488c-1.929 0-3.488 1.56-3.488 3.488s1.56 3.488 3.488 3.488 3.488-1.56 3.488-3.488-1.56-3.488-3.488-3.488zm0 5.174c-1.022 0-1.852-.83-1.852-1.852s.83-1.852 1.852-1.852 1.852.83 1.852 1.852-.83 1.852-1.852 1.852zm4.332-5.228c-.512 0-.927.415-.927.927s.415.927.927.927.927-.415.927-.927-.415-.927-.927-.927z"/></svg>
+                <a href="#" class="social-icon-link footer-icon" aria-label="Instagram">
+                    <img src="images/icons/instagram.svg" alt="Instagram">
                 </a>
-                <a href="#" class="footer-social-link" aria-label="TikTok">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M22.2 5.9v2.6c-2.3.1-4.2-.8-5.3-2.3v7.4c0 4.1-3.4 7.4-7.4 7.4-4.1 0-7.4-3.4-7.4-7.4S5.4 6.2 9.5 6.2c.5 0 1 .1 1.5.2v2.5c-.5-.1-1-.2-1.5-.2-2.7 0-4.9 2.2-4.9 4.9s2.2 4.9 4.9 4.9 4.9-2.2 4.9-4.9v-9c1.3-1.8 3.4-2.9 5.8-2.9.1 0 .2 0 .3.0z"/></svg>
+                <a href="#" class="social-icon-link footer-icon" aria-label="TikTok">
+                    <img src="images/icons/tiktok.svg" alt="TikTok">
                 </a>
-                <a href="#" class="footer-social-link" aria-label="YouTube">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M21.582,6.186c-0.23-0.86-0.908-1.538-1.768-1.768C18.267,4,12,4,12,4S5.733,4,4.186,4.418 c-0.86,0.23-1.538,0.908-1.768,1.768C2,7.733,2,12,2,12s0,4.267,0.418,5.814c0.23,0.86,0.908,1.538,1.768,1.768 C5.733,20,12,20,12,20s6.267,0,7.814-0.418c0.861-0.23,1.538-0.908,1.768-1.768C22,16.267,22,12,22,12S22,7.733,21.582,6.186z M10,15.464V8.536L16,12L10,15.464z"/></svg>
+                <a href="#" class="social-icon-link footer-icon" aria-label="YouTube">
+                    <img src="images/icons/youtube.svg" alt="YouTube">
                 </a>
             </div>
             <p class="footer-copy">&copy; 2025 Jonathan M. Keim. All Rights Reserved. | Power Values</p>
