--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="container">
                 <div class="section-header animate-on-scroll">
                     <span class="pre-headline">The Promise</span>
-                    <h2>“Clarity Isn’t Enough. Application Changes Everything.”</h2>
+                    <h2>Clarity Isn’t Enough. Application Changes Everything.</h2>
                     <p>The quiz showed you <em>what</em> your values are. This book shows you <em>how to live them</em>. Inside, you’ll learn how to:</p>
                 </div>
                 <div class="feature-grid">
@@ -175,7 +175,7 @@
             <div class="container">
                 <div class="section-header animate-on-scroll">
                     <span class="pre-headline">WHAT YOU’LL EXPERIENCE</span>
-                    <h2>“What Changes When You Apply Power Values”</h2>
+                    <h2>What Changes When You Apply Power Values</h2>
                 </div>
                 <div class="animate-on-scroll">
                     <ul class="outcomes-list">
@@ -203,7 +203,7 @@
         <section class="differentiators">
             <div class="container">
                 <div class="section-header animate-on-scroll">
-                    <h2>“Why <em>Power Values</em> Is Different From Other Personal Growth Books”</h2>
+                    <h2>Why <em>Power Values</em> Is Different From Other Personal Growth Books</h2>
                 </div>
                 <div class="tiles">
                     <div class="tile animate-on-scroll">
@@ -317,7 +317,7 @@
 
         <section class="final-close">
             <div class="container animate-on-scroll">
-                <h2>“You’ve Discovered Your Power Values. Now Learn to Live Them.”</h2>
+                <h2>You’ve Discovered Your Power Values. Now Learn to Live Them.</h2>
                 <p class="final-close-body">Awareness is the first step. But transformation happens when you apply what you’ve learned. This book gives you the exact framework, tools, and prompts to:</p>
                 <div class="tiles">
                      <div class="tile animate-on-scroll">
@@ -377,8 +377,8 @@
     </div>
 
     <div class="modal-overlay" id="flipbook-modal">
-        <span class="modal-close" id="close-flipbook">&times;</span>
         <div class="modal-content">
+            <span class="modal-close" id="close-flipbook">&times;</span>
             <iframe id="flipbook-iframe" src="" title="Power Values Book Preview" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
@@ -467,8 +467,8 @@
         const flipbookModal = document.getElementById('flipbook-modal');
         const flipbookIframe = document.getElementById('flipbook-iframe');
         
-        // IMPORTANT: Replace this URL with the one for your 6-page preview flipbook from Heyzine
-        const flipbookUrl = "https://heyzine.com/flip-book/19961ee07d.html#page/1"; 
+        // Link to the hosted flipbook preview
+        const flipbookUrl = "https://powervalues.github.io/power-values-flipbook/"; 
 
         if (openFlipbookButton && flipbookModal && flipbookIframe) {
             openFlipbookButton.addEventListener('click', () => {
