--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="container header-container">
             <div class="logo">
-                <a href="index.html" class="logo-link">
+                <a href="https://powervalues.xyz/" class="logo-link" target="_blank" rel="noopener noreferrer">
                     <img src="images/logo.svg" alt="Power Values" class="logo-image">
                 </a>
             </div>
@@ -31,16 +31,16 @@
                         </span>
                     </button>
                     <ul class="nav-menu" id="nav-menu">
-                        <li><a href="#" class="nav-link">Home</a></li>
-                        <li><a href="#" class="nav-link">Call</a></li>
-                        <li><a href="index.html" class="nav-link nav-link-active">Book</a></li>
-                        <li><a href="#" class="nav-link">Training</a></li>
-                        <li><a href="#" class="nav-link">Quiz</a></li>
-                        <li><a href="#" class="nav-link">Contact</a></li>
+                        <li><a href="https://powervalues.xyz/" class="nav-link" target="_blank" rel="noopener noreferrer">Home</a></li>
+                        <li><a href="https://powervalues.xyz/call" class="nav-link" target="_blank" rel="noopener noreferrer">Call</a></li>
+                        <li><a href="index.html" class="nav-link nav-link-active" target="_blank" rel="noopener noreferrer">Book</a></li>
+                        <li><a href="https://powervalues.github.io/power-values-training-series/" class="nav-link" target="_blank" rel="noopener noreferrer">Training</a></li>
+                        <li><a href="https://powervalues.xyz/quiz" class="nav-link" target="_blank" rel="noopener noreferrer">Quiz</a></li>
+                        <li><a href="#" class="nav-link" target="_blank" rel="noopener noreferrer">Contact</a></li>
                     </ul>
                 </nav>
                 <div class="header-cta">
-                    <a href="#cta" class="button button-small">Get The Book</a>
+                    <a href="https://www.amazon.com/Power-Values-Design-Around-Matters-ebook/dp/B0FMSXNXZC/ref=sr_1_1?crid=2RBXLKVUD7JEA&dib=eyJ2IjoiMSJ9.wQF3solYVg4bjQgujuXVMQ.-Hex4lEN1aTx3AdDQGa1ZFJe8owGsVAH9ZpY1-Z3-VA&dib_tag=se&keywords=power+values+jonathan+Keim&qid=1756469848&sprefix=power+values+jonathan+k%2Caps%2C736&sr=8-1" class="button button-small" target="_blank" rel="noopener noreferrer">Get The Book</a>
                 </div>
             </div>
         </div>
@@ -72,21 +72,21 @@
                             <div class="social-share-container">
                                <p class="share-prompt">Share Your Result:</p>
                                <div class="share-buttons">
-                                   <a href="#" class="social-icon-link hero-icon" aria-label="Share on Twitter">
+                                   <a href="#" class="social-icon-link hero-icon" aria-label="Share on Twitter" target="_blank" rel="noopener noreferrer">
                                        <img src="images/icons/twitter-heroarea.svg" alt="Share on Twitter">
                                    </a>
-                                   <a href="#" class="social-icon-link hero-icon" aria-label="Share on Facebook">
+                                   <a href="#" class="social-icon-link hero-icon" aria-label="Share on Facebook" target="_blank" rel="noopener noreferrer">
                                        <img src="images/icons/facebook-heroarea.svg" alt="Share on Facebook">
                                    </a>
-                                   <a href="#" class="social-icon-link hero-icon" aria-label="Share on LinkedIn">
+                                   <a href="#" class="social-icon-link hero-icon" aria-label="Share on LinkedIn" target="_blank" rel="noopener noreferrer">
                                        <img src="images/icons/Linkedin-heroarea.svg" alt="Share on LinkedIn">
                                    </a>
-                                   <a href="#" class="social-icon-link hero-icon" aria-label="Share on Instagram">
+                                   <a href="#" class="social-icon-link hero-icon" aria-label="Share on Instagram" target="_blank" rel="noopener noreferrer">
                                        <img src="images/icons/instagram-heroarea.svg" alt="Share on Instagram">
                                    </a>
                                </div>
                            </div>
-                           <a href="#" class="button button-secondary button-small">Download Certificate</a>
+                           <a href="#" class="button button-secondary button-small" target="_blank" rel="noopener noreferrer">Download Certificate</a>
                        </div>
                     </div>
                 </div>
@@ -98,12 +98,12 @@
             <div class="container">
                 <div class="book-promo-grid">
                     <div class="book-text-column">
-                        <h2>This is the spark that, when honored, unlocks your fullest potential.</h2>
+                        <h2>Design a Life of Purpose, Authenticity, and Impact</h2>
                         <p class="hero-body">
-                            Your full hierarchy of 10 Power Values has been sent to your inbox. Inside, you'll find what each value means for your choices, relationships, and future direction.
+                            This book is the culmination of 10 years of research into what it truly takes to live a life that aligns with your deepest desires. Inside, you’ll discover a proven system to uncover your unique Power Values—the driving forces behind your actions and decisions. 
                         </p>
                         <p class="bridge-cta">
-                            Knowing your values is powerful. <strong>Living them daily is transformational.</strong>
+                            You won't just gain insights; you'll get a personalized roadmap to lasting success and fulfillment. <strong>Let’s unlock the power within you.</strong>
                         </p>
                     </div>
                     <div class="book-image-column">
@@ -175,7 +175,7 @@
                     </div>
                 </div>
                 <div class="section-cta animate-on-scroll">
-                    <a href="#cta" class="button">Buy the Book Now</a>
+                    <a href="https://www.amazon.com/Power-Values-Design-Around-Matters-ebook/dp/B0FMSXNXZC/ref=sr_1_1?crid=2RBXLKVUD7JEA&dib=eyJ2IjoiMSJ9.wQF3solYVg4bjQgujuXVMQ.-Hex4lEN1aTx3AdDQGa1ZFJe8owGsVAH9ZpY1-Z3-VA&dib_tag=se&keywords=power+values+jonathan+Keim&qid=1756469848&sprefix=power+values+jonathan+k%2Caps%2C736&sr=8-1" class="button" target="_blank" rel="noopener noreferrer">Buy the Book Now</a>
                 </div>
             </div>
         </section>
@@ -256,7 +256,7 @@
                     </div>
                 </div>
                 <div class="section-cta animate-on-scroll">
-                    <a href="#cta" class="button">Start Living With Alignment Today</a>
+                    <a href="https://www.amazon.com/Power-Values-Design-Around-Matters-ebook/dp/B0FMSXNXZC/ref=sr_1_1?crid=2RBXLKVUD7JEA&dib=eyJ2IjoiMSJ9.wQF3solYVg4bjQgujuXVMQ.-Hex4lEN1aTx3AdDQGa1ZFJe8owGsVAH9ZpY1-Z3-VA&dib_tag=se&keywords=power+values+jonathan+Keim&qid=1756469848&sprefix=power+values+jonathan+k%2Caps%2C736&sr=8-1" class="button" target="_blank" rel="noopener noreferrer">Buy the Book Now</a>
                 </div>
             </div>
         </section>
@@ -265,28 +265,18 @@
             <div class="container">
                 <div class="section-header animate-on-scroll">
                     <h2>Get Your Guide to an Aligned Life</h2>
-                    <p>Choose the format that's best for you and start your journey today.</p>
+                    <p>Start your journey today by ordering the book on Amazon.</p>
                 </div>
-                <div class="options-flex">
-                    <div class="option-box animate-on-scroll">
-                        <span class="option-tag">Instant Access</span>
-                        <h3>PDF Edition + Workbook</h3>
-                        <ul>
-                            <li>Instant Download</li>
-                            <li>Bonus "Values-to-Action" Worksheet</li>
-                            <li>Read on any device</li>
-                        </ul>
-                        <a href="#" class="button">📥 Download PDF</a>
-                    </div>
-                    <div class="option-box animate-on-scroll">
-                        <span class="option-tag">Most Popular</span>
+                <div class="options-flex" style="justify-content: center;">
+                    <div class="option-box animate-on-scroll" style="flex: 0 1 500px;">
+                        <span class="option-tag">Order Now</span>
                         <h3>Amazon Print Edition</h3>
                         <ul>
                             <li>High-Quality Paperback</li>
                             <li>Perfect for highlighting & notes</li>
                             <li>Delivered to your door</li>
                         </ul>
-                        <a href="#" class="button button-secondary">🛒 Or Order on Amazon</a>
+                        <a href="https://www.amazon.com/Power-Values-Design-Around-Matters-ebook/dp/B0FMSXNXZC/ref=sr_1_1?crid=2RBXLKVUD7JEA&dib=eyJ2IjoiMSJ9.wQF3solYVg4bjQgujuXVMQ.-Hex4lEN1aTx3AdDQGa1ZFJe8owGsVAH9ZpY1-Z3-VA&dib_tag=se&keywords=power+values+jonathan+Keim&qid=1756469848&sprefix=power+values+jonathan+k%2Caps%2C736&sr=8-1" class="button button-secondary" target="_blank" rel="noopener noreferrer">🛒 Order on Amazon</a>
                     </div>
                 </div>
             </div>
@@ -338,7 +328,7 @@
                 </div>
             </div>
              <div class="section-cta animate-on-scroll">
-                <a href="#cta" class="button">📖 Get the Book Now</a>
+                <a href="https://www.amazon.com/Power-Values-Design-Around-Matters-ebook/dp/B0FMSXNXZC/ref=sr_1_1?crid=2RBXLKVUD7JEA&dib=eyJ2IjoiMSJ9.wQF3solYVg4bjQgujuXVMQ.-Hex4lEN1aTx3AdDQGa1ZFJe8owGsVAH9ZpY1-Z3-VA&dib_tag=se&keywords=power+values+jonathan+Keim&qid=1756469848&sprefix=power+values+jonathan+k%2Caps%2C736&sr=8-1" class="button" target="_blank" rel="noopener noreferrer">📖 Get the Book Now</a>
             </div>
         </section>
 
@@ -361,7 +351,7 @@
                     </div>
                 </div>
                 <p class="final-close-body">Imagine looking back a year from now and realizing this was the day you stopped drifting and started living aligned.<br>👉 Take the next step now.</p>
-                <a href="#cta" class="button button-large">📖 Get the Book Today</a>
+                <a href="https://www.amazon.com/Power-Values-Design-Around-Matters-ebook/dp/B0FMSXNXZC/ref=sr_1_1?crid=2RBXLKVUD7JEA&dib=eyJ2IjoiMSJ9.wQF3solYVg4bjQgujuXVMQ.-Hex4lEN1aTx3AdDQGa1ZFJe8owGsVAH9ZpY1-Z3-VA&dib_tag=se&keywords=power+values+jonathan+Keim&qid=1756469848&sprefix=power+values+jonathan+k%2Caps%2C736&sr=8-1" class="button button-large" target="_blank" rel="noopener noreferrer">📖 Get the Book Today</a>
                 <span class="guarantee-text">Backed by a 100% satisfaction guarantee.</span>
             </div>
         </section>
@@ -371,36 +361,39 @@
     <footer>
         <div class="container footer-container">
             <div class="footer-social">
-                <a href="#" class="social-icon-link footer-icon" aria-label="Twitter">
-                    <img src="images/icons/tiktok.svg" alt="Twitter">
+                <a href="https://x.com/PowerValues?t=ikLHJs3mtw1xALktdYu3HA&s=09" class="social-icon-link footer-icon" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
+                    <img src="images/icons/twitter.svg" alt="Twitter">
                 </a>
-                <a href="#" class="social-icon-link footer-icon" aria-label="Facebook">
-                    <img src="images/icons/facebook.svg" alt="Facebook">
-                </a>
-                <a href="#" class="social-icon-link footer-icon" aria-label="LinkedIn">
-                    <img src="images/icons/Linkedin.svg" alt="LinkedIn">
-                </a>
-                <a href="#" class="social-icon-link footer-icon" aria-label="Instagram">
-                    <img src="images/icons/instagram.svg" alt="Instagram">
-                </a>
-                <a href="#" class="social-icon-link footer-icon" aria-label="TikTok">
+                <a href="https://www.tiktok.com/@powervalues?is_from_webapp=1&sender_device=pc" class="social-icon-link footer-icon" aria-label="TikTok" target="_blank" rel="noopener noreferrer">
                     <img src="images/icons/tiktok.svg" alt="TikTok">
                 </a>
-                <a href="#" class="social-icon-link footer-icon" aria-label="YouTube">
+                <a href="https://www.facebook.com/share/178ECqSno7/" class="social-icon-link footer-icon" aria-label="Facebook" target="_blank" rel="noopener noreferrer">
+                    <img src="images/icons/facebook.svg" alt="Facebook">
+                </a>
+                <a href="https://www.linkedin.com/company/power-values/" class="social-icon-link footer-icon" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer">
+                    <img src="images/icons/Linkedin.svg" alt="LinkedIn">
+                </a>
+                <a href="https://www.instagram.com/mypowervalues?igsh=MWMwDdduc3dodzk2ag==" class="social-icon-link footer-icon" aria-label="Instagram" target="_blank" rel="noopener noreferrer">
+                    <img src="images/icons/instagram.svg" alt="Instagram">
+                </a>
+                <a href="https://www.pinterest.com/PowerValues/" class="social-icon-link footer-icon" aria-label="Pinterest" target="_blank" rel="noopener noreferrer">
+                    <img src="images/icons/pintrest.svg" alt="Pinterest">
+                </a>
+                <a href="https://youtube.com/@powervalues?si=s-5eb5iBcrIX8KSV" class="social-icon-link footer-icon" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
                     <img src="images/icons/youtube.svg" alt="YouTube">
                 </a>
             </div>
             <p class="footer-copy">&copy; 2025 Jonathan M. Keim. All Rights Reserved. | Power Values</p>
             <div class="footer-legal">
-                <a href="#">Terms & Conditions</a>
+                <a href="https://powervalues.xyz/terms-of-use" target="_blank" rel="noopener noreferrer">Terms & Conditions</a>
                 <span>|</span>
-                <a href="#">Privacy Policy</a>
+                <a href="https://powervalues.xyz/privacy-policy" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
             </div>
         </div>
     </footer>
 
     <div class="mobile-sticky-cta" id="mobile-sticky-cta">
-        <a href="#cta" class="button button-small">Get The Book</a>
+        <a href="https://www.amazon.com/Power-Values-Design-Around-Matters-ebook/dp/B0FMSXNXZC/ref=sr_1_1?crid=2RBXLKVUD7JEA&dib=eyJ2IjoiMSJ9.wQF3solYVg4bjQgujuXVMQ.-Hex4lEN1aTx3AdDQGa1ZFJe8owGsVAH9ZpY1-Z3-VA&dib_tag=se&keywords=power+values+jonathan+Keim&qid=1756469848&sprefix=power+values+jonathan+k%2Caps%2C736&sr=8-1" class="button button-small" target="_blank" rel="noopener noreferrer">Get The Book</a>
     </div>
 
     <div class="modal-overlay" id="flipbook-modal">
