--- a/index.html
+++ b/index.html
@@ -56,22 +56,10 @@
                         <div class="value-certificate" id="hero-cert-container">
                             <img src="images/loyaltycert.svg" id="certificate-image" alt="Your #1 Power Value is Loyalty">
                         </div>
-                    </div>
-
-                    <div class="hero-column-right">
-                        <h1 id="hero-h1">Your #1 Power Value is… <span id="value-name">Loyalty</span></h1>
-                        <h2 id="hero-h2">This is the spark that, when honored, unlocks your fullest potential.</h2>
-                        <p class="hero-body" id="hero-body">
-                            Your full hierarchy of 10 Power Values has been sent to your inbox. Inside, you’ll see what each value means for your choices, your relationships, and your future direction. (If it’s not there yet, check Promotions or Spam.)
-                        </p>
-                        <p class="bridge-cta" id="hero-cta">
-                            Knowing your values is powerful. <strong>Living them daily is transformational.</strong>
-                        </p>
-
                         <div class="hero-actions-container">
-                            <div class="social-share-container">
-                               <p class="share-prompt">Share Your Result:</p>
-                               <div class="share-buttons">
+                            <p class="share-label">Share Via</p>
+                            <div class="actions-row">
+                                <div class="share-buttons">
                                    <a href="#" class="social-icon-link hero-icon" aria-label="Share on Twitter" target="_blank" rel="noopener noreferrer">
                                        <img src="images/icons/twitter-heroarea.svg" alt="Share on Twitter">
                                    </a>
@@ -85,9 +73,22 @@
                                        <img src="images/icons/instagram-heroarea.svg" alt="Share on Instagram">
                                    </a>
                                </div>
-                           </div>
-                           <a href="#" class="button button-secondary button-small" target="_blank" rel="noopener noreferrer">Download Certificate</a>
+                            </div>
                        </div>
+                    </div>
+
+                    <div class="hero-column-right">
+                        <h1 id="hero-h1">Your #1 Power Value is… <span id="value-name">Loyalty</span></h1>
+                        <h2 id="hero-h2">This is the spark that, when honored, unlocks your fullest potential.</h2>
+                        <p class="hero-body" id="hero-body">
+                            Your full hierarchy of 10 Power Values has been sent to your inbox. Inside, you’ll see what each value means for your choices, your relationships, and your future direction. (If it’s not there yet, check Promotions or Spam.)
+                        </p>
+                        <p class="bridge-cta" id="hero-cta">
+                            Knowing your values is powerful. <strong>Living them daily is transformational.</strong>
+                        </p>
+                        <div class="hero-download-action">
+                            <a href="#" class="button button-secondary button-small" target="_blank" rel="noopener noreferrer">Download Certificate</a>
+                        </div>
                     </div>
                 </div>
 
