book page updates

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="container">
                 <div class="section-header animate-on-scroll">
                     <h2>Clarity Isn’t Enough. Application Changes Everything.</h2>
-                    <p>The quiz showed you what your values are. This book shows you how to live them. Inside, you’ll learn how to:</p>
+                    <p>The quiz showed you what your values are. This book shows you how to live them. Inside, you’ll learn&nbsp;how&nbsp;to:</p>
                 </div>
                 <div class="feature-grid">
                     <div class="feature-card animate-on-scroll">
@@ -189,7 +189,7 @@
                 </div>
                 <div class="author-bio-column animate-on-scroll">
                     
-                    <h2>Meet Your Guide, Jonathan M. Keim</h2>
+                    <h2>Meet Your Guide, Jonathan&nbsp;M.&nbsp;Keim</h2>
                     <p>As the Chief Development Officer at <strong>Robbins-Madanes Training</strong> (Tony Robbins' official school for life coaches), Jonathan has spent over a decade uncovering the keys to lasting transformation.</p>
                     <blockquote>
                         "This book is the culmination of 10 years of research into what it truly takes to create a life of purpose. It's not just theory—it's the roadmap."
@@ -384,7 +384,7 @@
                         <h3>End cycles of burnout.</h3>
                     </div>
                      <div class="tile animate-on-scroll">
-                        <div class="tile-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.259 8.715L18 9.75l-.259-1.035a3.375 3.375 0 00-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 002.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 00-2.456 2.456zM16.898 20.572L16.5 21.75l-.398-1.178a3.375 3.375 0 00-2.456-2.456L12.5 18l1.178-.398a3.375 3.375 0 002.456-2.456L16.5 14.25l.398 1.178a3.375 3.375 0 002.456 2.456L20.5 18l-1.178.398a3.375 3.375 0 00-2.456 2.456z" /></svg></div>
+                        <div class="tile-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.259 8.715L18 9.75l-.259-1.035a3.375 3.375 0 00-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 002.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 00-2.456 2.456zM16.898 20.572L16.5 21.75l-.398-1.178a3.375 3.375 0 00-2.456-2.456L12.5 18l1.178-.398a3.375 3.375 0 002.456 2.456L16.5 14.25l.398 1.178a3.375 3.375 0 002.456 2.456L20.5 18l-1.178.398a3.375 3.375 0 00-2.456 2.456z" /></svg></div>
                         <h3>Live with clarity, confidence, and purpose.</h3>
                     </div>
                 </div>
