--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                         </div>
                     </div>
                     <div class="testimonial-card">
-                        <p>"There are very few people that I would trust more than Jonathan Keim to spark, joy, excitement, and clarity when it comes to exploring and knowing one's self. The approach to value finding used here is the best I've found and the list of available values is comprehensive without being exhaustive. This can make a huge difference when helping one dial in on what is most important to them."</p>
+                        <p>"There are very few people that I would trust more than Jonathan Keim to spark, joy, and clarity when it comes to exploring and knowing one's self. The approach to value finding used here is the best I've found and the list of available values is comprehensive without being exhaustive. This can make a huge difference when helping one dial in on what is most important to them."</p>
                         <div class="testimonial-author">
                             <span>- Evan Ezell</span>
                         </div>
@@ -421,10 +421,10 @@
                     <img src="images/icons/youtube.svg" alt="YouTube">
                 </a>
             </div>
-            <p class="footer-copy">&copy; 2025 Jonathan M. Keim. All Rights Reserved. | Power Values</p>
+            <p class="footer-copy">&copy; 2025 Power Values. All Rights Reserved.</p>
             <div class="footer-legal">
                 <a href="https://powervalues.xyz/terms-of-use" target="_blank" rel="noopener noreferrer">Terms & Conditions</a>
-                <span>|</span>
+                <span class="separator">|</span>
                 <a href="https://powervalues.xyz/privacy-policy" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
             </div>
         </div>
