--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="hero-main-grid">
                     <div class="hero-column-left">
                         <div class="value-certificate" id="hero-cert-container">
-                            <img src="images/loyaltycert.svg" id="certificate-image"
+                            <img src="" id="certificate-image"
                                 alt="Your #1 Power Value is Loyalty">
                         </div>
                         <div class="hero-actions-container">
